--- a/arch/arm64/boot/dts/renesas/overlays/rzpi-dsi.dts
+++ b/arch/arm64/boot/dts/renesas/overlays/rzpi-dsi.dts
@@ -10,14 +10,15 @@
 	status = "okay";
 };
 
+// enable 5inch Waveshare panel (Raspberry Pi compatible)
 &mipi_panel {
 	status = "okay";
 };
 
-&gpt5 {
-	status = "okay";
+&rzsbc_mcu {
+        status = "okay";
 };
 
-&backlight {
-	status = "okay";
+&rzsbc_ft5406 {
+        status = "okay";
 };
